--- a/styles.css
+++ b/styles.css
@@ -16,27 +16,27 @@ footer {
   font-family: sans-serif;
 }
 
-.w {
+.s {
       background-image: url("images/tom1.png");
 }
 
-.a {
+.w {
       background-image: url("images/tom2.png");
 }
 
-.s {
+.a {
       background-image: url("images/tom3.png");
 }
 
-.d {
+.p {
         background-image: url("images/tom4.png");
 }
 
-.j {
+.n {
       background-image: url("images/snare.png");
 }
 
-.k {
+.i {
       background-image: url("images/kick.png");
 }
 
